--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ a.button1:before
 	width: calc(100% + 4px);
 	height: calc(100% + 4px);
 	z-index: -1;
-	animation: animate 20s linear infinite;
+	animation: ngotak 20s linear infinite;
 }
 a.button2
 {
@@ -63,7 +63,7 @@ a.button2:before
 	width: calc(100% + 4px);
 	height: calc(100% + 4px);
 	z-index: -1;
-	animation: animate 10s linear infinite;
+	animation: ngotak 10s linear infinite;
 }
 a.button3
 {
@@ -91,7 +91,7 @@ a.button3:before
 	width: calc(100% + 4px);
 	height: calc(100% + 4px);
 	z-index: -1;
-	animation: animate 5s linear infinite;
+	animation: ngotak 5s linear infinite;
 }
 b.satu
 {
@@ -112,7 +112,40 @@ b.dua
 	font-size: 10px;
 	font-family: Courier New;
 }
-@keyframes animate
+b.atas
+{
+	position: absolute;
+	color: red;
+	background-color: black;
+	bottom: 90%;
+	left: 2%;
+	width: 1300px;
+	height: 2px;
+}
+b.atas:before
+{
+	content:'';
+	position: absolute;
+	top: 2px;
+	bottom: 2px;
+	width: 100%;
+	height: 100%;
+	background: linear-gradient(to right, #000, #eaad9c,#e58a8a,#ff926b,#d8345f, #c70039);
+	animation: garis 2s linear infinite;
+}
+@keyframes garis
+{
+	0%
+	{
+		transform: translateX(-100%);
+	}
+	100%
+	{
+		transform: translateX(100%);
+	}
+}
+
+@keyframes ngotak
 {
 	0%
 	{
@@ -126,3 +159,4 @@ b.dua
 	{
 		background-position: 0 0;
 	}
+}
